<resources>
    <!--General-->
    <string name="app_name" translatable="false">UnknownSanta</string>
    <string name="event_creation_error">Oh! There are still empty fields.</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="dialog_confirmation_title">Confirmation</string>
    <string name="dialog_delete_event_message">Are you sure you want to delete this event?</string>
    <string name="dialog_delete_participant">Are you sure you want to delete this participant?</string>
    <string name="event_icon_content_description">Event icon</string>
    <string name="participant_icon_content_description">Participant avatar</string>
    <string name="checkmark_contentDescription">Checkmark that indicates that a secret santa has been asigned</string>
    <string name="delete_icon_contentDescription">Delete icon</string>


    <!--Main screen-->
    <string name="MainEventInfoTitle">Event info</string>
    <string name="MainEventInfoSubtitle">There are no events yet.</string>
    <string name="createEventButton">New event</string>
    <string name="MainParticipantTitle">Participants</string>
    <string name="dateFieldColon">Date:</string>
    <string name="placeFieldColon">Place:</string>
    <string name="expenseFieldColon">Expense limit:</string>
    <string name="edit_event_title">Edit Event info</string>


    <!--Event form screen-->
    <string name="createEventFormTitle">Create new event</string>
    <string name="nameField">Name</string>
    <string name="dateField">Date</string>
    <string name="placeField">Place</string>
    <string name="expenseField">Expense limit</string>
    <string name="christmasTree">Christmas tree drawing</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_format_email">Email format is not valid</string>
    <string name="error_emtpy_email">Email cannot be empty</string>
    <string name="error_empty_date">Date cannot be empty</string>
    <string name="error_empty_expense">Expense cannot be empty</string>

    <!--Event list screen-->
    <string name="event_list">My events</string>
    <string name="no_data_available">There is no data available.</string>

    <!--Participant form screen-->
    <string name="AddParticipantFormTitle">Add participant</string>
    <string name="avatarFormContentDescription">Participant avatar</string>
    <string name="emailField">Email</string>

    <!--Menu-->
    <string name="menu_delete_all">Delete all events</string>
    <string name="menu_about_unknownsanta">About UnknownSanta</string>
    <string name="menu_shuffle_participants">Assign Santas</string>
    <string name="Home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="tutorial_title">UnknownSanta tutorial</string>

    <!--Emails-->
    <string name="no_place_selected">To be decided</string>
    <string name="email_body_receiver">You are %1$s\'s Secret Santa! </string>
    <string name="email_body_event_name">You have been invited to participate in a Secret Santa game for %1$s, which will take place next %2$s. The expense limit has been set at %3$s.</string>
    <string name="email_footer"><div><br/>-- <br/>UnknownSanta App <br/> This message is autogenerated. <br/>To report any issue, please contact us at: unknownsantaapp@gmail.com</div></string>
    <string name="error_email_title">Notice</string>
    <string name="error_email_message">A change in the assignation has been found. Go to the menu above and press on \'Assign Santas\'. Then, check that all participants have the green check mark next to their names and try again.</string>
    <string name="email_subject_title">Secret Santa Event Information - UnknownSanta App</string>
    <string name="toast_email_sent">An email has been sent to all participants with the event information.</string>
    <string name="toast_email_sent_error">The emails could not be sent. Please, try again</string>

    <!--About screen-->
    <string name="about_title">About UnknownSanta app</string>
    <string name="about_current_version">Current version: 1.0</string>
    <string name="about_info">UnknownSanta is an Android app developed since 2019. </string>
    <string name="about_info_developer"> Developer: @Bearm91 in Github.</string>
    <string name="about_info_contact">Contact: unknownsantaapp@gmail.com</string>

    <string name="about_info_icons"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>

    <!--Dialog and toast messages-->
    <string name="toast_paticipant_created">Yay! A new participant joined the event!</string>
    <string name="toast_email_already_sent">The email have already been sent for this event.</string>
    <string name="toast_shuffle_error">You need at least 3 participants to assign secret santas.</string>
    <string name="toast_email_no_assignation">Emails cannot be sent until the assignation of secret santas is made.</string>
    <string name="dialog_send_email_message">An email will be sent to all the participants with the event information. Do you want to continue?</string>

    <string name="dialog_under_development_message">This feature is still under development</string>
    <string name="assigment_success_message">Yay! The association is made!</string>
    <string name="toast_all_events_deleted">All events were deleted correctly.</string>
    <string name="toast_delete_event_error">The events could not be deleted. Please, try again later.</string>
    <string name="dialog_delete_events_message">All events will be deleted. Do you want to continue?</string>

    <!--DB prepopulation values-->
    <string name="participant1_name_example">Peter</string>
    <string name="participant2_name_example">Susan</string>
    <string name="participant3_name_example">Charles</string>
    <string name="participant4_name_example">Grace</string>
    <string name="participant1_email_example">peter@mail.com</string>
    <string name="participant2_email_example">susan@mail.com</string>
    <string name="participant3_email_example">charles@mail.com</string>
    <string name="participant4_email_example">grace@mail.com</string>
    <string name="event_name_example">Event example</string>
    <string name="event_date_example">9 Aug 2020</string>
    <string name="event_place_example">Our fav restaurant</string>
    <string name="event_expense_example">20€ aprox</string>

</resources>
