<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        style="@style/myAboutInfo"/>

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_current_version"
        style="@style/myAboutInfo"/>

    <TextView
        android:id="@+id/tv_app_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_info_developer"
        style="@style/myAboutInfo"/>

    <TextView
        android:id="@+id/tv_app_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_info_icons"
        style="@style/myAboutInfo"/>

</LinearLayout>