<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="participant"
            type="com.bearm.unknownsanta.model.Participant" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:tool="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:backgroundTint="@color/colorPrimaryOpacity2"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/white_color">

        <LinearLayout
            android:id="@+id/layout_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/white_color"
            android:padding="@dimen/padding_list_item">

            <ImageView
                android:id="@+id/iv_rndm_avatar"
                android:layout_width="@dimen/width_list_item_avatar"
                android:layout_height="@dimen/height_list_item_avatar"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/participant_icon_content_description"
                app:srcCompat="@drawable/ic_elf" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="@dimen/linearlayout_participantlist_item_padding">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_part_name"
                        style="@style/myMainListTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/name_participantlist_item_paddintEnd"
                        android:text="@{participant.name}"
                        tool:text="@string/participant1_name_example" />

                    <ImageView
                        android:id="@+id/iv_assigned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_shape"
                        android:contentDescription="@string/checkmark_contentDescription"
                        android:tint="@color/colorPrimary" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_part_email"
                    style="@style/myMainListSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{participant.email}"
                    tool:text="@string/participant1_email_example" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/imageview_delete_participantlist_item_width"
                android:layout_height="@dimen/imageview_delete_participantlist_item_height"
                android:layout_gravity="center"
                android:layout_weight="0.05"
                android:contentDescription="@string/delete_icon_contentDescription"
                app:srcCompat="@drawable/ic_delete" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>