<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="Event"
            type="com.bearm.unknownsanta.model.Event" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:tool="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:backgroundTint="@color/colorPrimaryLight"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/layout_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_list_item">

            <ImageView
                android:id="@+id/iv_event_icon"
                android:layout_width="@dimen/imageview_eventlist_item_width"
                android:layout_height="@dimen/imageview_eventlist_item_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/event_icon_content_description"
                app:srcCompat="@drawable/ic_christmas_tree" />

            <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_list_item_data">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ev_name"
                        style="@style/myMainDarkTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@{Event.name}"
                        tool:text="@string/event_name_example" />

                    <ImageView
                        android:id="@+id/iv_email_sent"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/imageview_envelope_eventlist_item_paddingStart"
                        app:srcCompat="@drawable/ic_email_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_ev_date"
                    style="@style/myMainDarkSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Event.date}"
                    tool:text="@string/event_date_example" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_event_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/imageview_delete_eventlist_item_padding"
                app:srcCompat="@drawable/ic_delete"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>